<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/faculty_id_text_view"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:text="@string/faculty_id_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/faculty_lname_text_view"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/faculty_lname_text_view"
        app:layout_constraintEnd_toEndOf="@+id/faculty_id_text_view"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/faculty_id_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_id_text_view" />

    <TextView
        android:id="@+id/faculty_fname_text_view"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/faculty_fname_text_view"
        app:layout_constraintEnd_toEndOf="@+id/faculty_lname_text_view"
        app:layout_constraintStart_toStartOf="@+id/faculty_lname_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_lname_text_view" />

    <TextView
        android:id="@+id/faculty_salary_text_view"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/faculty_salary_text_view"
        app:layout_constraintEnd_toEndOf="@+id/faculty_fname_text_view"
        app:layout_constraintStart_toStartOf="@+id/faculty_fname_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_fname_text_view" />

    <TextView
        android:id="@+id/faculty_bonus_text_view"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/faculty_bonus_text_view"
        app:layout_constraintEnd_toEndOf="@+id/faculty_salary_text_view"
        app:layout_constraintStart_toStartOf="@+id/faculty_salary_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_salary_text_view" />

    <TextView
        android:id="@+id/bonus_text_view"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/bonus_text_view"
        app:layout_constraintEnd_toEndOf="@+id/faculty_bonus_text_view"
        app:layout_constraintStart_toStartOf="@+id/faculty_bonus_text_view"
        app:layout_constraintTop_toBottomOf="@+id/faculty_bonus_text_view" />

    <Button
        android:id="@+id/display_bonus_button"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/display_bonus_button"
        app:layout_constraintEnd_toEndOf="@+id/bonus_text_view"
        app:layout_constraintStart_toStartOf="@+id/bonus_text_view"
        app:layout_constraintTop_toBottomOf="@+id/bonus_text_view" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="400dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/display_bonus_button"
        app:layout_constraintStart_toStartOf="@+id/display_bonus_button"
        app:layout_constraintTop_toBottomOf="@+id/display_bonus_button">

        <Button
            android:id="@+id/prev_faculty_button"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:text="@string/prev_faculty_button" />

        <Button
            android:id="@+id/next_faculty_button"
            android:layout_width="177dp"
            android:layout_height="62dp"
            android:layout_marginTop="1dp"
            android:text="@string/next_faculty_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <Button
            android:id="@+id/faculty_details_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/faculty_details" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>